--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 
 					<h3>INITIAL JUDGING</h3>
-					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced by<span>Tuesday, November 1, 2016</span>.</p>
+					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced by <span>Tuesday, November 1, 2016</span>.</p>
 				</div>
 
 				<div class="four columns">
@@ -85,14 +85,14 @@
 					</div>
 
 					<h3>ALL-AGENCY PITCH</h3>
-					<p>The top teams will pitch their ideas to the entire agency during our All Agency Meeting on November 3, 2016. Employees will vote and the winning team will be announced that day.</p>
+					<p>The top teams will pitch their ideas to the entire agency during our All Agency Meeting on <span>November 3, 2016</span>. Employees will vote and the winning team will be announced that day.</p>
 				</div>
 			</div><!-- end assignmentContent -->
 			
 
 			<div class="row">
 				<div class="nine columns centered">
-					<a href="img/PDF/LAI Assignment_2016" download="Launch an Idea 2015"><button><p id="normal">THE FINE PRINT</p><p id="download"><span class="soloIcon entypo-publish"></span>&nbsp;DOWNLOAD</p></button></a>
+					<a href="img/PDF/LAI_Assignment_2016.pdf" download="Launch an Idea 2015"><button><p id="normal">THE FINE PRINT</p><p id="download"><span class="soloIcon entypo-publish"></span>&nbsp;DOWNLOAD</p></button></a>
 
 					<!--<a href="img/PDF/LAI FAQs.pdf" download="Launch an Idea FAQs"><button><p id="normal">FAQ</p><p id="download"><span class="soloIcon entypo-publish"></span>&nbsp;DOWNLOAD</p></button></a>-->
 				</div><!-- end nine columns -->
@@ -111,7 +111,7 @@
 				<div class="gallery-cell">
 					<img src="img/pastWinners/Solve_4_one.jpg">
 					<h3>Solve for One</h3>
-					<p>A coffee bar at T1 that sells premium coffee and contributes to the <br> Do Good Friday’s charity initiative.  </p>
+					<p>Hacking against the real accessibility challenges of real people here in LA, and inventing prototypes to help them live better. </p>
 				</div>
 
 				<div class="gallery-cell">
@@ -139,7 +139,7 @@
 			<div id="submissionsHeading" class="row">
 				<h2>PAST SUBMISSIONS</h2>
 				<hr>
-				<h5 class="eight columns centered">Here they are. The best of the best ideas from your fellow colleagues. So look them over and get inspired to create the next great philanthropic idea.</h5>
+				<h5 class="eight columns centered">Here they are. The best of the best ideas from your fellow colleagues. So look them over and get inspired to create the next great community-oriented idea.</h5>
 			</div><!-- end submissionsHeading -->
 
 
