--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</div>
 
 					<h3>SUBMIT AN IDEA</h3>
-					<p>Submit your team’s original idea by <span>Friday, October 28, 2016</span>. Convince us why we should invest in it without resorting to blackmail.</p>
+					<p>Submit your team’s original idea by <span>Friday, November 10, 2016</span>. Convince us why we should invest in it without resorting to blackmail.</p>
 				</div>
 
 				<div class="four columns">
@@ -76,7 +76,7 @@
 					</div>
 
 					<h3>INITIAL JUDGING</h3>
-					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced by <span>Tuesday, November 1, 2016</span>.</p>
+					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced by <span>Tuesday, November 14, 2016</span>.</p>
 				</div>
 
 				<div class="four columns">
@@ -85,7 +85,7 @@
 					</div>
 
 					<h3>ALL-AGENCY PITCH</h3>
-					<p>The top teams will pitch their ideas to the entire agency during our All Agency Meeting on <span>November 3, 2016</span>. Employees will vote and the winning team will be announced that day.</p>
+					<p>The top teams will pitch their ideas to the entire agency during our All Agency Meeting week of <span>November 14, 2016</span>. Employees will vote and the winning team will be announced that day.</p>
 				</div>
 			</div><!-- end assignmentContent -->
 			
