--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 
 					<h3>INITIAL JUDGING</h3>
-					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced by <span>Tuesday, November 14, 2016</span>.</p>
+					<p>T1 Leadership will vet the ideas for originality, potential for positive impact, and financial feasibility. The top ideas will be announced week of <span>Tuesday, November 14, 2016</span>.</p>
 				</div>
 
 				<div class="four columns">
